2003-02-03  John Dallaway  <jld@ecoscentric.com>

	* cdl.dsp: Call tclsh rather than cygtclsh80 in custom build rule.

2002-12-22  Nick Garnett  <nickg@ecoscentric.com>

	* doc/.cvsignore: Added this file to ignore generated HTML files.

2002-09-21  Bart Veer  <bartv@ecoscentric.com>

	* cdlcore.hxx, cdl.hxx, build.cxx, component.cxx, config.cxx,
	  database.cxx, dialog.cxx, interface.cxx, interp.cxx,
	  option.cxx, package.cxx, parse.cxx, property.cxx,
	  value.cxx, wizards.cxx
	Avoid const compatibility problems with Tcl 8.4

2002-08-03  Bart Veer  <bartv@ecoscentric.com>

	* acinclude.m4, configure.in, Makefile.am, testsuite/Makefile.am,
	testsuite/config/default.exp:
	Rework host-side autoconf support
	
2002-03-04  Gary Thomas  <gthomas@redhat.com>

	* build.cxx (update_header_file_info): 
	Suppress include files which and in "~" - these are backup
	files and are transient.  Keeping them can break a build
	tree if the backup files are removed.

2002-02-18  Bart Veer  <bartv@redhat.com>

	* transact.cxx (user_confirmation_required):
	Making a valuable with a user_value inactive requires
	user confirmation, it should not be done automatically
	by the inference engine.

2001-12-07  Bart Veer  <bartv@redhat.com>

	* doc/language.sgml, doc/*.html:
	Add a footnote clarifying a particular Tcl expression
	(bug 57097). Regenerate html.

	* doc/fixhtml.tcl
	Removed, the master copy now lives in pkgconf

2001-12-06  Bart Veer  <bartv@redhat.com>

	* cdlcore.hxx, build.cxx, interp.cxx:
	Move #include of <cctype> to common header rather than to
	individual source files, avoiding build problems with
	newer compilers. Reported by Jeff Law.

	* infer.cxx (inner_resolve):
	CdlTransaction::is_preferable_to() is not symmetric. Rearrange
	some expressions so that disabling options or making them
	inactive is subtly discouraged rather than encouraged.

2001-07-20  Bart Veer  <bartv@redhat.com>

	* value.cxx (save):
	Complicated "requires" expressions spread over multiple lines